Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77958

QtQuick applications don't work on macOS 10.15

XMLWordPrintable

    • macOS

      Looks like Catalina breaks QtQuick rendering.

      The window content will not be updated until forced by e.g. a window resize.

      Just try to input text in the following example:

      import QtQuick 2.12
      import QtQuick.Window 2.12
      
      Window {
          visible: true
          width: 640
          height: 480
          title: qsTr("Hello World")
      
          TextEdit {
              anchors.centerIn: parent
              width: 300
              text: "Hello"
          }
      }
      

        1. noupdate_logs.zip
          159 kB
        2. Catalina Beta 6-8.zip
          266 kB
        3. JerkyScreen.mov
          8.95 MB
        4. log.txt
          4.76 MB
        5. QTBUG-77958_SparkARStudio_PatchedVSNotPatched_480p.mov
          9.09 MB
        6. resize_animating.mov
          7.66 MB
        7. ComparableLogs.zip
          40 kB
        For Gerrit Dashboard: QTBUG-77958
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            njeisecke Nils Jeisecke
            Votes:
            19 Vote for this issue
            Watchers:
            24 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes